# stark-nist

stark-has-fips/: [workspace]
stark-has-fips/crates/channel/: Cargo.toml  benchmarkdata.csv
stark-has-fips/crates/channel/benches/: end_to_end.rs
stark-has-fips/crates/deep_ali/: Cargo.toml
stark-has-fips/crates/deep_ali/src/: cubic_ext.rs  deep.rs  fri.rs  lib.rs
stark-has-fips/crates/merkle/: Cargo.toml
stark-has-fips/crates/transcript/: Cargo.toml
stark-has-fips/crates/transcript/src/: lib.rs
stark-has-nist/: Cargo.toml
stark-has-nist/crates/channel/: benchmarkdata.csv
stark-has-nist/crates/channel/benches/: end_to_end.rs
stark-has-nist/crates/channel/src/: lib.rs
stark-has-nist/crates/commitment/src/: lib.rs
stark-has-nist/crates/deep_ali/src/: fri.rs  lib.rs  sizing.rs
stark-has-nist/crates/merkle/src/: lib.rs
stark-has-nist/crates/transcript/: Cargo.toml
stark-has-nist/crates/transcript/src/: lib.rs
stark-nist-security/crates/channel/: Cargo.toml  benchmarkdata.csv  mac-mini-NIST-Level1-Security-unconditional-r87-SHA256-FP6-benchmarkdata.csv  mac-mini-NIST-Level1-Security-unconditional-r87-SHA384-FP6-benchmarkdata.csv  mac-mini-NIST-Level1-Security-unconditional-r87-SHA512-FP6-benchmarkdata.csv  mac-mini-NIST-Level3-Security-r60-SHA384-FP6-benchmarkdata.csv  mac-mini-NIST-Level3-Security-r60-SHA384-FP8-benchmarkdata.csv  mac-mini-NIST-Level3-Security-r60-SHA512-FP8-benchmarkdata.csv  mac-mini-NIST-Level3-Security-unconditional-r131-SHA384-FP6-benchmarkdata.csv  mac-mini-NIST-Level3-Security-unconditional-r131-SHA512-FP6-benchmarkdata.csv  mac-mini-NIST-Level3-Security-unconditional-r131-SHA512-FP8-benchmarkdata.csv  mac-mini-NIST-Level5-Security-unconditional-r174-SHA512-FP8-benchmarkdata.csv  mac-mini-r40-sha3-benchmarkdata.csv
stark-nist-security/crates/channel/benches/: binary_end_to_end.rs  end_to_end.rs  multi_air_end_to_end.rs  perm_signature.rs  permsig.rs
stark-nist-security/crates/channel/src/: lib.rs
stark-nist-security/crates/deep_ali/: Cargo.toml
stark-nist-security/crates/deep_ali/src/: fri.rs  lib.rs  trace_import.rs
stark-nist-security/crates/merkle/src/: lib.rs
