[package]
name = "channel"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[features]
default = ["parallel", "fs_blake3"]
parallel = [
    "poseidon/parallel",
    "ark-ff/parallel"
]
fs_blake3 = ["transcript/blake3"]
poseidon = ["transcript/poseidon"]     # <- THIS is the key line
sha3 = ["transcript/sha3"]
keccak = ["transcript/keccak"]

[dependencies]
ark-ff = { workspace = true }
ark-serialize = "0.4.2"
ark-goldilocks = { path = "../ark-goldilocks" }


field = { path = "../field" }
commitment = { path = "../commitment" }
poseidon = { path = "../poseidon" }
transcript = { path = "../transcript" }
merkle = { path = "../merkle" }
deep_ali = { path = "../deep_ali" }

serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
serde_bytes = "0.11"
ark-poly.workspace = true

[dev-dependencies]
criterion = "0.5"
rand = "0.8"
bincode = "1.3"
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
rayon = "1"

[[bench]]
name = "protocol"
harness = false

[[bench]]
name = "end_to_end"
harness = false

